# EnTTMetadataGenerator

./: .gitmodules  CMakeLists.txt
example/: Example.h
src/: CMakeLists.txt  Main.cpp  Parser.cpp  Parser.h
src/Metadata/: Scope.cpp  Scope.h
